Fix: Not fitting columns and audio controls, beautify code.

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,11 @@ body {
   
 }
 
+.bottom-align-text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+ }
 
 
 header {
